Initial work on an internal representation using de Bruijn indices.
Following Spartan tt, we now have 2 layers of syntax:
1. An AST that the parser parses into. This is close to the user-input syntax,
containing strings for variables.
2. An AST that we use for our internal representation. This uses de Bruijn
indices for variables, in place of strings.

The parser's AST is implemented in lib/syntax/parsing, while our internal AST is
implemented in lib/syntax/internal.

lib/syntax/internal/debruijn.ml currently has an API for converting from the
parser's AST to the internal AST. I plan to implement functions that convert
the other way soon.

--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,6 @@
 (library
  (name cs4215_dependent_types)
- (libraries (re_export syntax)))
+ (libraries
+  (re_export parsing)
+  (re_export internal)
+))
