Small enhancements and debug utilities

--- a/lib/syntax/internal/dune
+++ b/lib/syntax/internal/dune
@@ -1,4 +1,6 @@
 (library
  (name internal)
- (libraries containers batteries
-            parsing))
+ (preprocess (pps sedlex.ppx ppx_deriving.show ppx_deriving.ord))
+ (libraries containers batteries ppx_deriving
+            parsing)
+)
