Major restructuring of debruijn.ml module
Rename most of the functions in debruijn.ml and change the order of the
arguments to be more in line with Ocaml convention.

Also, the README file has been updated with an overview of the implementation
of de Bruijn indices and my thoughts going forward.

--- a/lib/syntax/internal/dune
+++ b/lib/syntax/internal/dune
@@ -2,5 +2,5 @@
  (name internal)
  (preprocess (pps sedlex.ppx ppx_deriving.show ppx_deriving.ord))
  (libraries containers batteries ppx_deriving
-            parsing)
+            parsing utils)
 )
