More work on adding source posiitons to AST
Still doesn't work :(

--- a/lib/syntax/parsing/dune
+++ b/lib/syntax/parsing/dune
@@ -4,5 +4,5 @@
 (library
  (name parsing)
  (preprocess (pps sedlex.ppx ppx_deriving.show ppx_deriving.ord))
- (libraries sedlex menhirLib ppx_deriving)
+ (libraries sedlex menhirLib ppx_deriving syntax)
 )
