--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -4,5 +4,5 @@
 (library
  (name parsing)
  (preprocess (pps sedlex.ppx ppx_deriving.show ppx_fields_conv))
- (libraries containers sedlex menhirLib ppx_deriving)
+ (libraries containers iter sedlex menhirLib ppx_deriving)
 )
