Big cleanup and implement some error handling

--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -2,5 +2,5 @@
  (name kernel)
  (preprocess (pps ppx_deriving.show ppx_fields_conv))
  (libraries containers batteries ppx_deriving
-            parsing utils)
+            parsing common)
 )
