--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -1,6 +1,7 @@
 (library
  (name kernel)
- (preprocess (pps ppx_deriving.show ppx_fields_conv))
+ (preprocess 
+  (pps ppx_deriving.show ppx_deriving.eq ppx_fields_conv))
  (libraries containers batteries ppx_deriving
             parsing common)
 )
