--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -4,7 +4,7 @@
 (library
  (name parsing)
  (preprocess 
-  (pps sedlex.ppx ppx_deriving.show ppx_deriving.fold ppx_fields_conv))
+  (staged_pps sedlex.ppx ppx_deriving.show visitors.ppx ppx_fields_conv))
  (libraries containers iter sedlex menhirLib ppx_deriving 
             common)
 )
