--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -1,7 +1,7 @@
 (library
  (name kernel)
  (preprocess 
-  (pps ppx_deriving.show ppx_deriving.eq ppx_fields_conv))
+  (staged_pps ppx_deriving.show ppx_deriving.eq visitors.ppx ppx_fields_conv))
  (libraries containers batteries ppx_deriving
             parsing common)
 )
