--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name cs4215_dependent_types)
- (libraries
+ (libraries containers
   (re_export parsing)
   (re_export kernel)
   (re_export common)
