Improve error reporting and organize code a bit (#3)

--- a/lib/common/dune
+++ b/lib/common/dune
@@ -1,7 +1,6 @@
 (library
- (name kernel)
+ (name common)
  (preprocess 
   (staged_pps ppx_deriving.show ppx_deriving.eq visitors.ppx ppx_fields_conv))
- (libraries containers batteries ppx_deriving
-            parsing common)
-)
+ (libraries containers)
+ )
