--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -3,6 +3,8 @@
 
 (library
  (name parsing)
- (preprocess (pps sedlex.ppx ppx_deriving.show ppx_fields_conv))
- (libraries containers iter sedlex menhirLib ppx_deriving)
+ (preprocess 
+  (staged_pps sedlex.ppx ppx_deriving.show visitors.ppx ppx_fields_conv))
+ (libraries containers iter sedlex menhirLib ppx_deriving 
+            common)
 )
