--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -3,8 +3,7 @@
 
 (library
  (name parsing)
- (preprocess 
-  (staged_pps sedlex.ppx ppx_deriving.show visitors.ppx ppx_fields_conv))
+ (preprocess (pps sedlex.ppx))
  (libraries containers iter sedlex menhirLib ppx_deriving 
             common)
 )
