Change the data structure used by Context so that it works nicely with js_of_ocaml

--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -2,6 +2,6 @@
  (name kernel)
  (preprocess 
   (pps ppx_deriving.show ppx_fields_conv))
- (libraries containers batteries ppx_deriving
+ (libraries containers containers-data ppx_deriving
             parsing common)
 )
