--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@opam/ppx_fields_conv":  ">= v0.14.2",
     "@opam/sedlex": ">= 2.3",
     "@opam/menhir": ">= 20210310",
-    "ocaml": "~4.11.2"
+    "ocaml": "~4.12.0"
   },
   "devDependencies": {
-    "@opam/dune": "~2.8.4",
-    "@opam/ocaml-lsp-server": "~1.4.1",
+    "@opam/dune": "~2.8.5",
+    "@opam/ocaml-lsp-server": "~1.5.0",
+    "@opam/ocamlformat": "0.18.0",
     "@opam/js_of_ocaml": "~3.9.0",
-    "ocaml": "~4.11.2"
+    "ocaml": "~4.12.0"
   }
 }
