Bug fixes, existential types, fancy web based editor, report and presentation (#7)
* clean up specs a bit

* Add a note on transition systems

* Flesh out specs with more exposition.

* Small fixes to big step semantics for programs

* small cleanup

* Update project overview in readme and flesh out most of the exposition, except for metatheoretic discussion

* Small adjustments to wording

* Testing and bug fixing

* More testing and fixing. Local let bindings are causing problems with typechecking :(

* Fix local let bindings and make cantor's theorem work. Also added pdf and dvi files to .gitignore

* Delete presentation.pdf

* Delete spec.pdf

* Add syntactic sugar inspired by Lean

* update readme with a new sample proof

* Implement optional annotations for def and let. Also add some proofs involving disjunction.

* Remove pdf files from gitignore

* Save source string when parsing

* Improve specs and try implementing destructuring for pairs

* Flesh out specs for existentials and implement them

* Update dependencies

* Fancy new syntax for existential elimination. Also updated specs.

* Tried to implement repl (#6)

* attempted repl

* pass both ctx and fix test

* implement quit and restart and not exit on error for repl

* try implement interface for js

* remove io code

* add export

* fix

* fix

* export real

* overwrite bc.js

* try with wrap

* refactor js_run_repl

* convert js types

* ignore vscode

* wrap result with success flag

* remove reset

* add back reset

* update

* ace web editor

Co-authored-by: aellym0 <77778907+aellym0@users.noreply.github.com>

* Better error reporting and some fixes.

* Fix normalization of existentials

* Work on presentation

* Update readme

Co-authored-by: Abdul Haliq <liqo12@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "build": [ "dune build ./bin/main.bc", "dune build ./bin/main.bc.js" ]
   },
   "dependencies": {
-    "@opam/containers": ">= 3.2 < 4.0",
-    "@opam/containers-data": ">= 3.2 < 4.0",
+    "@opam/containers": ">= 3.3 < 4.0",
+    "@opam/containers-data": ">= 3.3 < 4.0",
     "@opam/iter": "~1.2.1",
-    "@opam/visitors": ">= 20210316",
-    "@opam/ppx_deriving": "~5.2.1",
-    "@opam/ppx_fields_conv":  ">= v0.14.2",
-    "@opam/sedlex": ">= 2.3",
+    "@opam/js_of_ocaml-ppx": "3.9.0",
     "@opam/menhir": ">= 20210310",
-    "ocaml": "~4.11.2"
+    "@opam/ppx_deriving": "~5.2.1",
+    "@opam/ppx_fields_conv": ">= v0.14.2",
+    "@opam/sedlex": ">= 2.3",
+    "@opam/visitors": ">= 20210316",
+    "ocaml": "~4.12.0"
   },
   "devDependencies": {
-    "@opam/dune": "~2.8.4",
-    "@opam/ocaml-lsp-server": "~1.4.1",
+    "@opam/dune": "~2.8.5",
+    "@opam/ocaml-lsp-server": "~1.5.0",
+    "@opam/ocamlformat": "0.18.0",
     "@opam/js_of_ocaml": "~3.9.0",
-    "ocaml": "~4.11.2"
+    "ocaml": "~4.12.0"
   }
 }
