Fully document everything using odoc

--- a/lib/common/dune
+++ b/lib/common/dune
@@ -1,5 +1,6 @@
 (library
  (name common)
+ (public_name lambdacplus.common)
  (preprocess 
   (staged_pps ppx_deriving.show ppx_deriving.eq visitors.ppx ppx_fields_conv))
  (libraries containers)
