--- a/lib/kernel/dune
+++ b/lib/kernel/dune
@@ -1,5 +1,6 @@
 (library
  (name kernel)
+ (public_name lambdacplus.kernel)
  (preprocess 
   (pps ppx_deriving.show ppx_fields_conv))
  (libraries containers containers-data ppx_deriving
