--- a/lib/parsing/dune
+++ b/lib/parsing/dune
@@ -3,6 +3,7 @@
 
 (library
  (name parsing)
+ (public_name lambdacplus.parsing)
  (preprocess (pps sedlex.ppx))
  (libraries containers iter sedlex menhirLib ppx_deriving 
             common)
